--- a/todo-list-maui/AppShell.xaml
+++ b/todo-list-maui/AppShell.xaml
@@ -3,8 +3,8 @@
     x:Class="todo_list_maui.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:todo_list_maui"
-    Shell.FlyoutBehavior="Flyout"
+    xmlns:local="clr-namespace:todo_list_maui.Views"
+    Shell.FlyoutBehavior="Disabled"
     Title="todo_list_maui">
 
     <ShellContent
